karpenter-mpol/add-karpenter-nodeselector/.chainsaw-test/exception-sibling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-exception-sibling
  namespace: kp-med-ns
spec:
  nodeSelector: {}
  containers:
  - name: app
    image: ghcr.io/kyverno/test-busybox:1.35
