karpenter-mpol/add-karpenter-nodeselector/.chainsaw-test/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    type: small
  name: kp-small-ns
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    type: medium
  name: kp-med-ns
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    type: large
  name: kp-lg-ns
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-small-ns
  name: pod-sm01
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-med-ns
  name: pod-med01
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-med-ns
  name: pod-med02
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: on-demand
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-lg-ns
  name: pod-lg01
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  namespace: kp-lg-ns
  name: pod-lg02
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: spot
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
