karpenter-mpol/add-karpenter-nodeselector/.chainsaw-test/exception-sibling-expected.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-exception-sibling
  namespace: kp-med-ns
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
    karpenter.sh/capacity-type: spot
  containers:
  - name: app
    image: ghcr.io/kyverno/test-busybox:1.35
