karpenter-mpol/add-karpenter-nodeselector/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-karpenter-nodeselector
spec:
  steps:
  - name: policy-exceptions-namespace
    skipDelete: true
    try:
    - apply:
        resource: {apiVersion: v1, kind: Namespace, metadata: {name: policy-exceptions}}
  - name: step-01
    try:
    - apply:
        file: ../add-karpenter-nodeselector.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: resource.yaml
  - name: step-03
    try:
    - assert:
        file: patch-med.yaml
    - assert:
        file: patch-lg.yaml
    - error:
        file: patch-med-bad.yaml
    - error:
        file: patch-lg-bad.yaml
    - error:
        file: patch-sm-bad.yaml
  - name: exception-isolation
    try:
    - apply:
        file: exception.yaml
    - apply:
        file: exception-pod.yaml
    - apply:
        file: exception-sibling.yaml
    - assert:
        file: exception-expected.yaml
    - assert:
        file: exception-sibling-expected.yaml
